--- a/static/thank_you.css
+++ b/static/thank_you.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Helvetica', '微软雅黑'; /* 更改为指定的字体 */
     background-image: url('images/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -13,16 +13,24 @@ body {
     height: 100vh;
 }
 
+.thank-you-image {
+    text-align: center;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center; /* 确保容器内元素居中 */
+    align-items: center;
+}
+
 .thank-you-image img {
-    max-width: 100%;
+    max-width: 150%; /* 放大图片但仍保持响应式 */
     height: auto;
     border-radius: 10px;
-    margin-bottom: 20px; /* 在图片与文字之间添加一些间距 */
 }
 
 .container {
     text-align: center;
     max-width: 600px;
+    width: 100%; /* 确保容器宽度 */
     margin: 50px auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0);
@@ -32,12 +40,12 @@ body {
 
 .container h1 {
     margin-top: 20px;
-    font-size: 2em;
+    font-size: 2.5em; /* 放大标题字体 */
     color: #333;
 }
 
 .container p {
-    font-size: 1.2em;
+    font-size: 1.3em; /* 放大段落字体 */
     margin-bottom: 20px;
 }
 
@@ -48,6 +56,7 @@ body {
     color: white;
     border-radius: 5px;
     text-decoration: none;
+    font-size: 1.2em; /* 调整按钮字体大小 */
 }
 
 .button:hover {
