--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -13,8 +13,8 @@
         </div>
 
         <!-- 显示感谢信息 -->
-        <h1>感谢您的回复！</h1>
-        <p>非常感谢您的参与，期待在活动中见到您。</p>
+        <h1>让我康康是谁填完了！</h1>
+        <p>感谢参与！到时见！</p>
         <a href="{{ url_for('index') }}" class="button">返回首页</a>
     </div>
 </body>
