--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
             <p>P.S. This year, the party’s theme is 新中式 (New Chinese Style)! The dress code is white or green 😘.</p>
             <p>P.P.S. For birthday gifts, I’d like to try something different this year. Instead of material gifts, I’d love to receive a short memo from you—whether electronically or by hand—about your first impression of me, our friendship, and the moments we’ve shared that made us laugh!</p>
             <p>But, if you really, really, really want to bring something:</p>
-            <ol>
+            <ol class="special-list">
                 <li>The letter I mentioned above!</li>
                 <li>Save your money for our future hangouts!</li>
                 <li>DM me and chat! 😈</li>
