--- a/static/home.css
+++ b/static/home.css
@@ -40,6 +40,12 @@ body {
     margin-top: 15px;
     margin-bottom: 15px;
     line-height: 1.8;
+    font-size: 1.5rem; /* 增大字体大小，可以根据需要调整 */
+}
+
+.special-list {
+    font-size: 1.5rem; /* 你可以调整这个值来设置合适的字体大小 */
+    line-height: 1.8; /* 保持良好的行间距 */
 }
 
 .invite-message p:first-child {
