--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <p>My Dearest Friends,</p>
             <p>You are warmly invited to my birthday party in Shanghai, China, this August (Yes! I’m back!).</p>
             <p>Knowing many of you may have work commitments, I’ve chosen Sunday, August 25th, for our celebration ;)</p>
-            <p>Please RSVP with your preferred activities by August 21st 💡.</p>
+            <p>Please RSVP with your preferred activities by August 23rd 💡.</p>
             <p>🎂</p>
             <p>⭐️About the Birthday Party⭐️</p>
             <p>The tentative plan has two parts. You can join EITHER part or BOTH. Please select which part(s) you can attend!</p>
